include/grass/defs/gis.h

/* adj_cellhd.c */
void G_adjust_Cell_head(struct Cell_head *, int, int);
void G_adjust_Cell_head3(struct Cell_head *, int, int, int);
int G_adjust_window_ll(struct Cell_head *cellhd);
void *G__malloc(const char *, int, size_t);
void *G__calloc(const char *, int, size_t, size_t);
void *G__realloc(const char *, int, void *, size_t);
void G_free(void *);
/* area.c */
int G_begin_cell_area_calculations(void);
double G_area_of_cell_at_row(int);
int G_begin_polygon_area_calculations(void);
int G_asprintf(char **, const char *, ...)
    __attribute__((format(printf, 2, 3)));
int G_rasprintf(char **, size_t *, const char *, ...)
    __attribute__((format(printf, 3, 4)));
/* bres_line.c */
void G_bresenham_line(int, int, int, int, int (*)(int, int));
int G_debug(int, const char *, ...) __attribute__((format(printf, 2, 3)));
/* done_msg.c */
void G_done_msg(const char *, ...) __attribute__((format(printf, 1, 2)));
void G_message(const char *, ...) __attribute__((format(printf, 1, 2)));
void G_verbose_message(const char *, ...) __attribute__((format(printf, 1, 2)));
void G_important_message(const char *, ...)
    __attribute__((format(printf, 1, 2)));
void G_fatal_error(const char *, ...)
    __attribute__((format(printf, 1, 2))) G_NORETURN;
void G_warning(const char *, ...) __attribute__((format(printf, 1, 2)));
void G_set_error_routine(int (*)(const char *, int));
/* list.c */
void G_list_element(const char *, const char *, const char *,
                    int (*)(const char *, const char *, char *));
/* ls.c */
void G_set_ls_filter(int (*)(const char *, void *), void *);
void G_set_ls_exclude_filter(int (*)(const char *, void *), void *);
void G_set_percent_routine(int (*)(int));
/* plot.c */
void G_setup_plot(double, double, double, double, int (*)(int, int),
                  int (*)(int, int));
/* snprintf.c */
int G_snprintf(char *, size_t, const char *, ...)
    __attribute__((format(printf, 3, 4)));