dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


struct_Cell_head.__slots__ = [
    "format",
    "compressed",
    "rows",
    "rows3",
    "cols",
    "cols3",
    "depths",
    "proj",
    "zone",
    "ew_res",
    "ew_res3",
    "ns_res",
    "ns_res3",
    "tb_res",
    "north",
    "south",
    "east",
    "west",
    "top",
    "bottom",
]
struct_Cell_head._fields_ = [
    ("format", c_int),
    ("compressed", c_int),
    ("rows", c_int),
    ("rows3", c_int),
    ("cols", c_int),
    ("cols3", c_int),
    ("depths", c_int),
    ("proj", c_int),
    ("zone", c_int),
    ("ew_res", c_double),
    ("ew_res3", c_double),
    ("ns_res", c_double),
    ("ns_res3", c_double),
    ("tb_res", c_double),
    ("north", c_double),
    ("south", c_double),
    ("east", c_double),
    ("west", c_double),
    ("top", c_double),
    ("bottom", c_double),
]


# include/grass/gis.h: 503
class struct_G_3dview(Structure):
    pass


struct_G_3dview.__slots__ = [
    "pgm_id",
    "from_to",
    "fov",
    "twist",
    "exag",
    "mesh_freq",
    "poly_freq",
    "display_type",
    "lightson",
    "dozero",
    "colorgrid",
    "shading",
    "fringe",
    "surfonly",
    "doavg",
    "grid_col",
    "bg_col",
    "other_col",
    "lightpos",
    "lightcol",
    "ambient",
    "shine",
    "vwin",
]
struct_G_3dview._fields_ = [
    ("pgm_id", c_char * int(40)),
    ("from_to", (c_float * int(3)) * int(2)),
    ("fov", c_float),
    ("twist", c_float),
    ("exag", c_float),
    ("mesh_freq", c_int),
    ("poly_freq", c_int),
    ("display_type", c_int),
    ("lightson", c_int),
    ("dozero", c_int),
    ("colorgrid", c_int),
    ("shading", c_int),
    ("fringe", c_int),
    ("surfonly", c_int),
    ("doavg", c_int),
    ("grid_col", c_char * int(40)),
    ("bg_col", c_char * int(40)),
    ("other_col", c_char * int(40)),
    ("lightpos", c_float * int(4)),
    ("lightcol", c_float * int(3)),
    ("ambient", c_float),
    ("shine", c_float),
    ("vwin", struct_Cell_head),
]


# include/grass/gis.h: 529
class struct_Key_Value(Structure):
    pass


struct_Key_Value.__slots__ = [
    "nitems",
    "nalloc",
    "key",
    "value",
]
struct_Key_Value._fields_ = [
    ("nitems", c_int),
    ("nalloc", c_int),
    ("key", POINTER(POINTER(c_char))),
    ("value", POINTER(POINTER(c_char))),
]


# include/grass/gis.h: 558
class struct_Option(Structure):
    pass


struct_Option.__slots__ = [
    "key",
    "type",
    "required",
    "multiple",
    "options",
    "opts",
    "key_desc",
    "label",
    "description",
    "descriptions",
    "descs",
    "answer",
    "def",
    "answers",
    "next_opt",
    "gisprompt",
    "guisection",
    "guidependency",
    "checker",
    "count",
]
struct_Option._fields_ = [
    ("key", String),
    ("type", c_int),
    ("required", c_int),
    ("multiple", c_int),
    ("options", String),
    ("opts", POINTER(POINTER(c_char))),
    ("key_desc", String),
    ("label", String),
    ("description", String),
    ("descriptions", String),
    ("descs", POINTER(POINTER(c_char))),
    ("answer", String),
    ("def", String),
    ("answers", POINTER(POINTER(c_char))),
    ("next_opt", POINTER(struct_Option)),
    ("gisprompt", String),
    ("guisection", String),
    ("guidependency", String),
    ("checker", CFUNCTYPE(UNCHECKED(c_int), String)),
    ("count", c_int),
]


# include/grass/gis.h: 589
class struct_Flag(Structure):
    pass


struct_Flag.__slots__ = [
    "key",
    "answer",
    "suppress_required",
    "suppress_overwrite",
    "label",
    "description",
    "guisection",
    "next_flag",
]
struct_Flag._fields_ = [
    ("key", c_char),
    ("answer", c_char),
    ("suppress_required", c_char),
    ("suppress_overwrite", c_char),
    ("label", String),
    ("description", String),
    ("guisection", String),
    ("next_flag", POINTER(struct_Flag)),
]


# include/grass/gis.h: 606
class struct_GModule(Structure):
    pass


struct_GModule.__slots__ = [
    "label",
    "description",
    "keywords",
    "overwrite",
    "verbose",
]
struct_GModule._fields_ = [
    ("label", String),
    ("description", String),
    ("keywords", POINTER(POINTER(c_char))),
    ("overwrite", c_int),
    ("verbose", c_int),
]


# include/grass/gis.h: 615
class struct_TimeStamp(Structure):
    pass


struct_TimeStamp.__slots__ = [
    "dt",
    "count",
]
struct_TimeStamp._fields_ = [
    ("dt", DateTime * int(2)),
    ("count", c_int),
]


# include/grass/gis.h: 620
class struct_Counter(Structure):
    pass


struct_Counter.__slots__ = [
    "value",
]
struct_Counter._fields_ = [
    ("value", c_int),
]


# include/grass/gis.h: 624
class struct_Popen(Structure):
    pass


struct_Popen.__slots__ = [
    "fp",
    "pid",
]
struct_Popen._fields_ = [
    ("fp", POINTER(FILE)),
    ("pid", c_int),
]

CELL = c_int  # include/grass/gis.h: 629

DCELL = c_double  # include/grass/gis.h: 630

FCELL = c_float  # include/grass/gis.h: 631


# /usr/include/x86_64-linux-gnu/bits/types/struct_timespec.h: 11
class struct_timespec(Structure):
    pass


struct_timespec.__slots__ = [
    "tv_sec",
    "tv_nsec",
]
struct_timespec._fields_ = [
    ("tv_sec", __time_t),
    ("tv_nsec", __syscall_slong_t),
]

grass_int64 = c_int64  # include/grass/gis.h: 636

LCELL = grass_int64  # include/grass/gis.h: 648


# include/grass/gis.h: 650
class struct__Color_Value_(Structure):
    pass


struct__Color_Value_.__slots__ = [
    "value",
    "red",
    "grn",
    "blu",
]
struct__Color_Value_._fields_ = [
    ("value", DCELL),
    ("red", c_ubyte),
    ("grn", c_ubyte),
    ("blu", c_ubyte),
]


# include/grass/gis.h: 657
class struct__Color_Rule_(Structure):
    pass


struct__Color_Rule_.__slots__ = [
    "low",
    "high",
    "next",
    "prev",
]
struct__Color_Rule_._fields_ = [
    ("low", struct__Color_Value_),
    ("high", struct__Color_Value_),
    ("next", POINTER(struct__Color_Rule_)),
    ("prev", POINTER(struct__Color_Rule_)),
]


# include/grass/gis.h: 667
class struct_anon_20(Structure):
    pass


struct_anon_20.__slots__ = [
    "red",
    "grn",
    "blu",
    "set",
    "nalloc",
    "active",
]
struct_anon_20._fields_ = [
    ("red", POINTER(c_ubyte)),
    ("grn", POINTER(c_ubyte)),
    ("blu", POINTER(c_ubyte)),
    ("set", POINTER(c_ubyte)),
    ("nalloc", c_int),
    ("active", c_int),
]


# include/grass/gis.h: 676
class struct_anon_21(Structure):
    pass


struct_anon_21.__slots__ = [
    "vals",
    "rules",
    "nalloc",
    "active",
]
struct_anon_21._fields_ = [
    ("vals", POINTER(DCELL)),
    ("rules", POINTER(POINTER(struct__Color_Rule_))),
    ("nalloc", c_int),
    ("active", c_int),
]


# include/grass/gis.h: 663
class struct__Color_Info_(Structure):
    pass


struct__Color_Info_.__slots__ = [
    "rules",
    "n_rules",
    "lookup",
    "fp_lookup",
    "min",
    "max",
]
struct__Color_Info_._fields_ = [
    ("rules", POINTER(struct__Color_Rule_)),
    ("n_rules", c_int),
    ("lookup", struct_anon_20),
    ("fp_lookup", struct_anon_21),
    ("min", DCELL),
    ("max", DCELL),
]


# include/grass/gis.h: 687
class struct_Colors(Structure):
    pass


struct_Colors.__slots__ = [
    "version",
    "shift",
    "invert",
    "is_float",
    "null_set",
    "null_red",
    "null_grn",
    "null_blu",
    "undef_set",
    "undef_red",
    "undef_grn",
    "undef_blu",
    "fixed",
    "modular",
    "cmin",
    "cmax",
    "organizing",
]
struct_Colors._fields_ = [
    ("version", c_int),
    ("shift", DCELL),
    ("invert", c_int),
    ("is_float", c_int),
    ("null_set", c_int),
    ("null_red", c_ubyte),
    ("null_grn", c_ubyte),
    ("null_blu", c_ubyte),
    ("undef_set", c_int),
    ("undef_red", c_ubyte),
    ("undef_grn", c_ubyte),
    ("undef_blu", c_ubyte),
    ("fixed", struct__Color_Info_),
    ("modular", struct__Color_Info_),
    ("cmin", DCELL),
    ("cmax", DCELL),
    ("organizing", c_int),
]


# include/grass/gis.h: 710
class struct_ilist(Structure):
    pass


struct_ilist.__slots__ = [
    "value",
    "n_values",
    "alloc_values",
]
struct_ilist._fields_ = [
    ("value", POINTER(c_int)),
    ("n_values", c_int),
    ("alloc_values", c_int),
]


# /usr/include/x86_64-linux-gnu/bits/struct_stat.h: 26
class struct_stat(Structure):
    pass


struct_stat.__slots__ = [
    "st_dev",
    "st_ino",
    "st_nlink",
    "st_mode",
    "st_uid",
    "st_gid",
    "__pad0",
    "st_rdev",
    "st_size",
    "st_blksize",
    "st_blocks",
    "st_atim",
    "st_mtim",
    "st_ctim",
    "__glibc_reserved",
]
struct_stat._fields_ = [
    ("st_dev", __dev_t),
    ("st_ino", __ino_t),
    ("st_nlink", __nlink_t),
    ("st_mode", __mode_t),
    ("st_uid", __uid_t),
    ("st_gid", __gid_t),
    ("__pad0", c_int),
    ("st_rdev", __dev_t),
    ("st_size", __off_t),
    ("st_blksize", __blksize_t),
    ("st_blocks", __blkcnt_t),
    ("st_atim", struct_timespec),
    ("st_mtim", struct_timespec),
    ("st_ctim", struct_timespec),
    ("__glibc_reserved", __syscall_slong_t * int(3)),
]

# include/grass/defs/gis.h: 76
if _libs["grass_gis.8.5"].has("G_adjust_Cell_head", "cdecl"):
    G_adjust_Cell_head = _libs["grass_gis.8.5"].get("G_adjust_Cell_head", "cdecl")
    G_adjust_Cell_head.argtypes = [POINTER(struct_Cell_head), c_int, c_int]
    G_adjust_Cell_head.restype = None

# include/grass/defs/gis.h: 77
if _libs["grass_gis.8.5"].has("G_adjust_Cell_head3", "cdecl"):
    G_adjust_Cell_head3 = _libs["grass_gis.8.5"].get("G_adjust_Cell_head3", "cdecl")
    G_adjust_Cell_head3.argtypes = [POINTER(struct_Cell_head), c_int, c_int, c_int]
    G_adjust_Cell_head3.restype = None

# include/grass/defs/gis.h: 78
if _libs["grass_gis.8.5"].has("G_adjust_window_ll", "cdecl"):
    G_adjust_window_ll = _libs["grass_gis.8.5"].get("G_adjust_window_ll", "cdecl")
    G_adjust_window_ll.argtypes = [POINTER(struct_Cell_head)]
    G_adjust_window_ll.restype = c_int

# include/grass/defs/gis.h: 84
if _libs["grass_gis.8.5"].has("G__malloc", "cdecl"):
    G__malloc = _libs["grass_gis.8.5"].get("G__malloc", "cdecl")
    G__malloc.argtypes = [String, c_int, c_size_t]
    G__malloc.restype = POINTER(c_ubyte)
    G__malloc.errcheck = lambda v, *a: cast(v, c_void_p)

# include/grass/defs/gis.h: 85
if _libs["grass_gis.8.5"].has("G__calloc", "cdecl"):
    G__calloc = _libs["grass_gis.8.5"].get("G__calloc", "cdecl")
    G__calloc.argtypes = [String, c_int, c_size_t, c_size_t]
    G__calloc.restype = POINTER(c_ubyte)
    G__calloc.errcheck = lambda v, *a: cast(v, c_void_p)

# include/grass/defs/gis.h: 86
if _libs["grass_gis.8.5"].has("G__realloc", "cdecl"):
    G__realloc = _libs["grass_gis.8.5"].get("G__realloc", "cdecl")
    G__realloc.argtypes = [String, c_int, POINTER(None), c_size_t]
    G__realloc.restype = POINTER(c_ubyte)
    G__realloc.errcheck = lambda v, *a: cast(v, c_void_p)

# include/grass/defs/gis.h: 87
if _libs["grass_gis.8.5"].has("G_free", "cdecl"):
    G_free = _libs["grass_gis.8.5"].get("G_free", "cdecl")
    G_free.argtypes = [POINTER(None)]
    G_free.restype = None

# include/grass/defs/gis.h: 104
if _libs["grass_gis.8.5"].has("G_begin_cell_area_calculations", "cdecl"):
    G_begin_cell_area_calculations = _libs["grass_gis.8.5"].get(
        "G_begin_cell_area_calculations", "cdecl"
    )
    G_begin_cell_area_calculations.argtypes = []
    G_begin_cell_area_calculations.restype = c_int

# include/grass/defs/gis.h: 105
if _libs["grass_gis.8.5"].has("G_area_of_cell_at_row", "cdecl"):
    G_area_of_cell_at_row = _libs["grass_gis.8.5"].get("G_area_of_cell_at_row", "cdecl")
    G_area_of_cell_at_row.argtypes = [c_int]
    G_area_of_cell_at_row.restype = c_double

# include/grass/defs/gis.h: 106
if _libs["grass_gis.8.5"].has("G_begin_polygon_area_calculations", "cdecl"):
    G_begin_polygon_area_calculations = _libs["grass_gis.8.5"].get(
        "G_begin_polygon_area_calculations", "cdecl"
    )
    G_begin_polygon_area_calculations.argtypes = []
    G_begin_polygon_area_calculations.restype = c_int
